--- a/index.qmd
+++ b/index.qmd
@@ -2284,7 +2284,7 @@ df1 %>%
   head(10)
 ```
 
-### résumer, compter et regrouper avec `summarize()`, `count()` et `group_by()`
+### Résumer, compter et regrouper avec `summarize()`, `count()` et `group_by()`
 ```{r}
 #| echo: true
 #| output: false
@@ -2336,6 +2336,15 @@ df1 %>%
             mean_TI = mean(Total.Interactions)) %>% 
   arrange(desc(n)) %>% 
   head(10)
+
+# Utilisons plusieurs verbes dplyr pour comparer les Likes et Comments des posts de Ronaldo et Messi :
+
+igposts %>%
+  group_by(Account) %>%
+  filter(Account %in% c("Cristiano Ronaldo", "Leo Messi")) %>% 
+  summarize(n = n(), mean_Followers = mean(Followers.at.Posting),
+            mean_Likes = mean(Likes),
+            mean_Comments = mean(Comments)) 
 ```
 
 ## Devoir pour Session 8 et infos questionnaire/Problem Set 3
