--- a/index.qmd
+++ b/index.qmd
@@ -2863,3 +2863,56 @@ igposts %>%
 
 ```
 :::
+# Session 9 (Problem Set 3)
+
+Les résultats du **Problem Set 3** (bonnes réponses, échelle des notes)
+sont accéssibles sur la page Moodle de l'exercice.
+
+Voici l'histogramme des points obtenus par n = 79 étudiant.es qui ont
+participé au Problem Set 3.
+
+-   Le nombre maximal de points était de 20, il fallait 10 pour passer
+    le test.
+
+-   La moyenne des points obtenus était de 11.5 (note = 4.25).
+
+-   59 étudiant.es (75%) ont réussi Problem Set 3.
+
+```{r}
+#| echo: false
+#| output: true
+#| warning: false
+# script pour faire un histogramme des points obtenus dans le Problem Set 3
+# cours : Exercices Méthodes II
+# date : 24/25 avril 2024
+# auteur : Julian Maitra
+
+library(ggplot2)
+
+# Adaptez le code suivant pour votre répertoire de travail :
+
+setwd("/Users/domus_julian/Documents/GitHub/intro-a-R/code")
+
+# Enregistrez le fichier CSV points_ps_2 dans votre répertoire de travail, 
+# puis importez les données dans R (modifiez le code suivant selon votre ordinateur) :
+
+points_ps_3 <- read.csv("~/Documents/GitHub/intro-a-R/code/points_ps_3.csv", encoding="UTF-8")
+
+#points_ps_3 # il y a 79 observations
+
+hist_ps_3 <-ggplot(points_ps_3, 
+                   aes(x=x)) + 
+  geom_histogram(binwidth = 1, color="black", fill="white") +
+  labs(title = "Histogramme des points obtenus dans le PS 3", # labs() permet de définir plusieurs labels en même temps (titre, axes, etc.)
+       subtitle = "n = 79 résultats de test", 
+       caption = "Source des données : Moodle") +       
+  xlab("Points obtenus") +                             
+  ylab("Fréquence") + 
+  theme_minimal() +
+  coord_cartesian(xlim = c(0,20), ylim = c(0,14)) +
+  scale_x_continuous(breaks = seq(0,20, by=1)) +
+  scale_y_continuous(breaks = seq(0,14, by=2)) +
+  geom_vline(aes(xintercept=9.5),
+             color="red",  linewidth=1, linetype="dashed")
+hist_ps_3
+```
