--- a/index.qmd
+++ b/index.qmd
@@ -2677,7 +2677,7 @@ diamonds %>%
 ### 11 : igposts I
 
 -   Chargez le jeu de données `igposts`que nous avons vu pendant session
-    7.
+    7.  
 -   Si nécessaire, téléchargez le encore une fois depuis Moodle et
     sauvegardez le dans le dossier de votre ordinateur que vous avez
     définit comme répértoire de travail.
@@ -2857,7 +2857,6 @@ igposts %>%
 
 #Le post Instagram qui a reçu le plus de commentaires par follower dans igposts est un post d'album de l'actrice indienne Kiara Advani avec des photos de son mariage.
 ```
-
 :::
 
 ### 19 : igposts IX
@@ -2954,31 +2953,197 @@ hist_ps_3
 
 La **statistique descriptive** est généralement la première étape d'une
 analyse statistique. Elle aide à comprendre le jeu de données et ses
-caractéristiques à un niveau descriptif. 
+caractéristiques à un niveau descriptif.
 
-Il ne s'agit donc **pas**
-d'analyser des **relations de cause à effet** (c'est en effet le rôle de
-la *statistique inférentielle*).
+Il ne s'agit donc **pas** d'analyser des **relations de cause à effet**
+(c'est en effet le rôle de la *statistique inférentielle*).
 
-Les mesures suivantes font souvent partie des statistiques d
+Les mesures suivantes font souvent partie des statistiques descriptives
+(souvent appelés *summary statistics* en anglais) et sont utilisées pour
+une première analyse des variables de type numérique d'un jeu de
+données.
 
 -   La taille de l'échantillon (nombre d'observations n)
 
 -   Les mesures de tendance centrale (moyenne, médiane, mode)
 
--   Les mesures de dispersion (variances, kurtosis, etc.
+-   Les mesures de dispersion (étendue, variance, écart-type, kurtosis,
+    etc.)
 
--   Identification des valeurs extrêmes (également appelées valeurs
-    aberrantes) de variables numériques.
+-   Les mesure de position (percentiles, quartiles)
 
--   Répartition en pourcentage des variables catégorielles
-    (identification de la fréquence de chaque catégorie)
+Ces mesure permettent d'obtenir une première idée de la structure d'un
+jeu de données. Elles permettent également d'identifier des valeurs
+extrêmes (angl. outliers) qui peuvent jouer un rôle important dans un
+jeud de données.
 
-échantillon ou d'une population en utilisant des mesures de tendance
-centrale (moyenne, médiane, mode), de dispersion (étendue, variance,
-écart-type) et de position (percentiles, quartiles). Elle inclut
-également l'utilisation de graphiques et de tableaux pour représenter
-visuellement les données. La statistique descriptive est une étape
-importante dans l'analyse de données quantitatives, car elle permet de
-décrire les données de manière claire et concise, facilitant ainsi leur
-interprétation.
+Des mesures concernant les **variables catégorielles** peuvent également
+faire partie d'une analyse déscriptive, notamment :
+
+-   La fréquence de chaque catégories (p. ex. combien de participants à
+    un questionnaire sont des femmes ?)
+-   La répartition des différentes catégories (p. ex. quel est le
+    pourcentage de femmes dans l'échantillon ?)
+
+Dans la a mise en œuvre, par exemple dans un travail scientifique, les
+statistiques descriptives sont souvent présentées sous deux formats :
+
+-   des **tableaux** pour les mesures telles que la taille de
+    l'échantillon, les moyennes, etc. Souvent aussi pour différentes
+    catégories, p. ex. homme et femme.
+
+-   des **graphiques** pour la visualisation de distributions, par
+    exemple des histogrammes, et des répartitions de variables
+    catégorielles, par exemple par le biais de diagrammes à barres.
+
+Lorsque l'on veut représenter des statistiques descriptives dans R, il
+est souvent utile de combiner les deux paquets R `dplyr` et `ggplot2`.
+C'est une bonne nouvelle, car nous avons déjà examiné les principaux
+codes R nécessaires pour dans ce cours.
+
+Pour nous entraîner à nouveau, cette fois avec nos propres données, nous
+allons procéder ci-dessous à une analyse descriptive des réponses au
+questionnaire !
+
+Vous verrez donc par la suite comment ce que nous avons appris jusqu'à
+présent dans le cours peut être combiné de manière utile.
+
+## Analyse des réponses au questionnaire, 1ère partie
+
+Veuillez ouvrir un nouveau script R et charger les paquets `tidyverse` et `ggthemes`. Ensuite, vous pouvez définir votre répértoire de travaille.
+
+Vous pouvez ensuite télécharger le fichier `reponses_socio.csv`depuis la
+page Moodle du cours (matériel de la 10ème session) et le sauvegarder
+dans votre répértoire de travail.
+
+![Paramètres pour l'importation du fichier
+reponses_socio.csv](images/Screenshot 2024-05-01 at 09.09.22.png)
+
+```{r}
+#| echo: true
+#| output: true
+#| warning: false
+
+# Script session 10
+
+library(tidyverse)
+library(ggthemes)
+
+# vous devez modifier les fonctions setwd() et read.csv() pour correspondre à votre ordinateur :
+setwd("/Users/domus_julian/Documents/GitHub/intro-a-R/code")
+
+reponses_socio <- read.csv("/Users/domus_julian/Documents/GitHub/intro-a-R/code/reponses_socio.csv", encoding="UTF-8", stringsAsFactors=TRUE)
+
+# Contrôle, si ça a marché
+str(reponses_socio)
+
+# Une formidable fonction pour analyser les stats déscriptives : summary()
+summary(reponses_socio)
+
+# Abordons maintenant quelques questions plus spécifiques auxquelles nous pouvons répondre à l'aide de statistiques descriptives
+
+
+# 1. Trajet pour arriver à l'université
+#*****************************************
+
+# histogramme très basique
+ggplot(data = reponses_socio,
+       mapping = aes(x=trajet)) +
+  geom_histogram(binwidth = 10)
+
+# plus sophistiqué
+ggplot(data = reponses_socio,
+       mapping = aes(x=trajet)) +
+  geom_histogram(binwidth = 10, 
+                 fill = "steelblue",
+                     color = "black") +
+  labs(title = "Trajets en minutes des étudiant(e)s pour arriver à l'UniFR",
+       subtitle = "Questionnaire avec n = 74 participant(e)s",
+       x = "Trajet en minutes",
+       y = "Fréquence") +
+  theme_minimal()
+
+
+# 2. histogramme des années de naissance
+#*****************************************
+
+ggplot(data = reponses_socio,
+       mapping = aes(x=naissance)) +
+  geom_histogram(binwidth = 1, fill = "lightgreen", color = "black") +
+  labs(title = "Années de naissance",
+       subtitle = "n = 74 répondants à un questionnaire",
+       x = "Année de naissance",
+       y = "Fréquence")+
+  theme_minimal()
+
+
+# 3. diagramme à barres des genres
+#*****************************************
+
+ggplot(data = reponses_socio,
+       mapping = aes(x=genre, 
+             fill=genre)) +
+  geom_bar()
+
+# graphique plus sophistiquée
+
+# changer d'abord l'ordre des catégories (commençant avec la plus fréquente)
+
+ordre = c("Femme", "Homme", "Autre")
+
+# Puis combiner dplyr avec ggplot2 !
+reponses_socio %>% 
+  select(genre) %>% 
+  mutate(genre = factor(genre, levels = ordre)) %>% 
+  arrange(genre) %>% 
+ggplot(aes(x=genre, fill=genre)) +
+  geom_bar(show.legend = FALSE) +
+  labs(title = "Répartition des genres",
+       subtitle = "n = 74 répondants à un questionnaire",
+       x = "Genre",
+       y = "Fréquence",
+       legend = "") +
+  theme_minimal()
+
+
+# 4. Moyennes des notes
+#*****************************************
+
+mean(reponses_socio$note_ecole, na.rm = TRUE)
+
+mean(reponses_socio$note_uni, na.rm = TRUE)
+
+min(reponses_socio$note_uni, na.rm = TRUE)
+
+min(reponses_socio$note_ecole, na.rm = TRUE)
+
+reponses_socio %>% 
+  select(note_ecole,note_uni, genre) %>% 
+  group_by(genre) %>% 
+  filter(note_ecole > 3.99,
+         note_uni > 0.99) %>% 
+  summarize(note_ecole_moyenne = mean(note_ecole),
+            note_uni_moyenne = mean(note_uni))
+
+reponses_socio %>% 
+  select(note_ecole,note_uni) %>% 
+  filter(note_ecole > 3.99,
+         note_uni > 0.99) %>% 
+ggplot(aes(x=note_uni, y=note_ecole)) +
+         geom_point() +
+  geom_smooth(method = "lm")
+
+
+# 5. Permis de conduire
+#*****************************************
+
+table(reponses_socio$permis)
+
+table(reponses_socio$suisse)
+
+reponses_socio %>% 
+  select(permis, suisse) %>% 
+  filter(permis !="N/A") %>% 
+  group_by(suisse,permis) %>% 
+  summarize(n = n())
+```
